# cheapo-rs

./: Cargo.toml
src/: cpu.rs  keyboard.rs  main.rs  screen.rs
